# slyce

./: .gitignore  CoC.hs  README.md  slyce.cabal  stack.yaml
doc/: Makefile  main.tex  preamble.tex  refs.bib
doc/figs/: checking.tex  inference.tex
doc/secs/: approach.tex  body.tex  examples.tex  implementation.tex
documentation/: main.tex  preamble.tex  refs.bib
documentation/figs/: checking.tex  inference.tex
documentation/secs/: approach.tex  body.tex  examples.tex  implementation.tex  installation.tex  overview.tex  typesystem.tex
examples/: bad.sly  bool.sly  church.sly  church2.sly  data.sly  depend.sly  fst.sly  hello.sly  largeelim.sly  list.sly  nat.sly  oldlist.sly  pair.sly  sigma.sly  sym.sly  trans.sly  type.sly  typeMatching.sly  vec.sly
src/: Ast.hs  Context.hs  Equality.hs  Main.hs  Parser.y  PrettyPrint.hs  Scanner.x  TypeCheck.hs
test/: TypeCheckTest.hs  hello.hs
