name:                slyce
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/slyce#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable slyce
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       
    Ast,
    Context,
    Equality,
    TypeCheck,
    Parser,
    Scanner
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    unbound-generics >= 0.4.3,
    mtl >= 2.2.1,
    array >= 0.5.4.0
  build-tools:         happy, alex
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
  default-extensions:
    DeriveGeneric
    DeriveAnyClass
    MultiParamTypeClasses
    DerivingStrategies
